--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,4 +1,4 @@
-<head>
+<!-- <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" 
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="jass.css">
-</head>
+</head> -->
 
 <div class="text-center">
     <h2>Welcome, {{name}}!</h2>
@@ -32,3 +32,25 @@
           </form>
     </div>
 </div>
+
+{{#if blogposts.length}}
+<div class="blogpost-list text-center">
+  <h3>Current Blogposts:</h3>
+
+  {{#each blogposts as |blogpost|}}
+
+  <div class="card col-10 mx-auto">
+    <div>
+      <h4><a href="/blogpost/{{blogpost.id}}">{{blogpost.title}}</a></h4>
+    </div>
+    <div class="form-group text-center">
+      <button class="btn btn-danger col-4" data-id="{{blogpost.id}}">DELETE</button>
+    </div>
+  </div>
+
+  {{/each}}
+</div>
+{{/if}}
+</div>
+
+<script src="./js/dashboard.js"></script>
