--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,5 @@
 <!-- Leave this part out when converting it to handlebars -->
-<head>
+<!-- <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" 
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="jass.css">
-</head>
+</head> -->
 <!--  -->
 
 <!-- NAVBAR -->
@@ -27,7 +27,7 @@
 {{#each blogposts as |blogpost| }}
 <div class="card">
   <div class="card-header text-center bg-primary text-light">
-    <h4><a href="/blogpost/{{blogpost.id}}">{{blogpost.name}}</a></h4>
+    <h4><a href="/blogpost/{{blogpost.id}}">{{blogpost.title}}</a></h4>
   </div>
   <div class="card-body">
     <p class="card-text">Blog text</p>
